// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-upgrade - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and upgrade Azure workloads between plans, tiers, or SKUs within Azure. Generates assessment reports and automates upgrade steps. WHEN: upgrade Consumption to Flex Consumption, upgrade Azure Functions plan, migrate hosting plan, upgrade Functions SKU, move to Flex Consumption, upgrade Azure service tier, change hosting plan, upgrade function app plan, migrate App Service to Container Apps.",
  "extractedKeywords": [
    "app service",
    "apps",
    "assess",
    "assessment",
    "automates",
    "azure",
    "between",
    "change",
    "consumption",
    "container",
    "deploy",
    "flex",
    "function",
    "functions",
    "generates",
    "hosting",
    "mcp",
    "migrate",
    "monitor",
    "move",
    "plan",
    "plans",
    "reports",
    "service",
    "skus",
    "steps",
    "tier",
    "tiers",
    "upgrade",
    "validation",
    "when",
    "within",
    "workloads",
  ],
  "name": "azure-upgrade",
}
`;

exports[`azure-upgrade - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "apps",
  "assess",
  "assessment",
  "automates",
  "azure",
  "between",
  "change",
  "consumption",
  "container",
  "deploy",
  "flex",
  "function",
  "functions",
  "generates",
  "hosting",
  "mcp",
  "migrate",
  "monitor",
  "move",
  "plan",
  "plans",
  "reports",
  "service",
  "skus",
  "steps",
  "tier",
  "tiers",
  "upgrade",
  "validation",
  "when",
  "within",
  "workloads",
]
`;
